# aganitha-papers

./: README.md  diabetes.csv  output_papers.csv  pyproject.toml
src/aganitha_papers/: cancer.csv  cli.py  diabetes.csv  fetch.py  fetch_papers.py  output_papers.csv  pyproject.toml
